--- a/xlib_test/CMakeLists.txt
+++ b/xlib_test/CMakeLists.txt
@@ -3,13 +3,13 @@ cmake_minimum_required(VERSION 3.18)
 project(
     GPU_Emulator
     VERSION 1.0
-    LANGUAGES CXX
+    LANGUAGES C
 )
 
 add_executable(
     Emulate
-    main.cpp
+    main.c
+    GAEDisplay.c
 )
 
-target_include_directories(Emulate PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(Emulate PRIVATE X11 stdc++)
+target_link_libraries(Emulate PRIVATE X11)
