--- a/software_rendering/display/CMakeLists.txt
+++ b/software_rendering/display/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(X11 REQUIRED)
 
 add_library(display STATIC
-    GAEDisplay.c    
+    Display.c    
 )
 
 target_include_directories(display PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
