--- a/software_rendering/display/CMakeLists.txt
+++ b/software_rendering/display/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(X11 REQUIRED)
+find_package(OpenMP REQUIRED)
 
 add_library(display STATIC
     Display.c    
@@ -6,4 +7,9 @@ add_library(display STATIC
 
 target_include_directories(display PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
-target_link_libraries(display PUBLIC X11 Xrandr)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(my_program PRIVATE X11 Xrandr OpenMP::OpenMP_CXX)
+else()
+    target_link_libraries(display PRIVATE X11 Xrandr)
+endif()
+
