--- a/software_rendering/render/CMakeLists.txt
+++ b/software_rendering/render/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(render STATIC
     VertexShader.c
     VertexPostProcessor.c
+    PrimitivesAssembler.c
     Rasterizer.c
     FragmentShader.c
     renderer.c
