created engine abstraction

--- a/software_rendering/engine/rutil/CMakeLists.txt
+++ b/software_rendering/engine/rutil/CMakeLists.txt
@@ -17,4 +17,4 @@ add_library(rutil STATIC
 )
 
 target_include_directories(rutil PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(rutil PUBLIC assimp m display gml)
+target_link_libraries(rutil PUBLIC assimp m gml)
