--- a/software_rendering/engine/CMakeLists.txt
+++ b/software_rendering/engine/CMakeLists.txt
@@ -1,10 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
 
-project(
-    software_rendering
-    VERSION 1.0
-    LANGUAGES C
-)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Og -g")
@@ -14,11 +9,16 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -DNDEBUG")
 endif()
 
-add_subdirectory(engine)
+add_subdirectory(glfw)
+add_subdirectory(gml)
+add_subdirectory(rutil)
+add_subdirectory(render)
 
-add_executable(
-    app
-    main.c
+include_directories(glfw/include)
+
+add_library(engine STATIC
+    engine.c
 )
 
-target_link_libraries(app PRIVATE engine)
+
+target_link_libraries(engine PRIVATE glfw ${GLFW_LIBRARIES} gml rutil render)
