--- a/software_rendering/engine/render/CMakeLists.txt
+++ b/software_rendering/engine/render/CMakeLists.txt
@@ -1,11 +1,6 @@
 add_library(render STATIC
-    VertexShader.c
-    VertexPostProcessor.c
-    PrimitivesAssembler.c
-    Rasterizer.c
-    FragmentShader.c
-    renderer.c
+   renderer.c
 )
 
 target_include_directories(render PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(render PUBLIC rutil gml)
+target_link_libraries(render PUBLIC utilities gml)
