--- a/software_rendering/engine/utilities/CMakeLists.txt
+++ b/software_rendering/engine/utilities/CMakeLists.txt
@@ -11,10 +11,10 @@ link_directories (
     ${Assimp_BINARY_DIR}/lib
 )
 
-add_library(rutil STATIC
+add_library(utilities STATIC
     RenderUtil.c 
     ModelLoader.c
 )
 
-target_include_directories(rutil PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(rutil PUBLIC assimp m gml)
+target_include_directories(utilities PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_link_libraries(utilities PUBLIC assimp m gml)
