--- a/software_rendering/engine/render/CMakeLists.txt
+++ b/software_rendering/engine/render/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(render STATIC
-   renderer.c
+   renderer.cpp
 )
 
 target_include_directories(render PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(render PUBLIC utilities gml)
+target_link_libraries(render PUBLIC utilities)
