--- a/software_rendering/engine/utilities/CMakeLists.txt
+++ b/software_rendering/engine/utilities/CMakeLists.txt
@@ -13,8 +13,8 @@ link_directories (
 
 add_library(utilities STATIC
     RenderUtil.c 
-    ModelLoader.c
+    ModelLoader.cpp
 )
 
 target_include_directories(utilities PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(utilities PUBLIC assimp m gml)
+target_link_libraries(utilities PUBLIC assimp m)
