--- a/software_rendering/CMakeLists.txt
+++ b/software_rendering/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 3.18)
 project(
     software_rendering
     VERSION 1.0
-    LANGUAGES C
 )
 
+set(CMAKE_CXX_STANDARD 11)
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Og -g")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Og -g")
@@ -18,7 +18,7 @@ add_subdirectory(engine)
 
 add_executable(
     app
-    main.c
+    main.cpp
 )
 
 target_link_libraries(app PRIVATE engine)
