--- a/software_rendering/engine/CMakeLists.txt
+++ b/software_rendering/engine/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
+set(CMAKE_CXX_STANDARD 11)
+
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Og -g")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Og -g")
@@ -8,19 +10,22 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -DNDEBUG")
 endif()
 
-find_package(OpenGL REQUIRED)
-include_directories(${OPENGL_INCLUDE_DIRS})
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS})
+include_directories("imgui")
 
-add_subdirectory(glfw)
-add_subdirectory(gml)
 add_subdirectory(utilities)
 add_subdirectory(render)
 
-include_directories(glfw/include)
-
 add_library(engine STATIC
-    engine.c
+    engine.cpp
+    imgui/imgui.cpp
+    imgui/imgui_draw.cpp
+    imgui/imgui_widgets.cpp
+    imgui/imgui_tables.cpp
+    imgui/backends/imgui_impl_sdl2.cpp
+    imgui/backends/imgui_impl_sdlrenderer2.cpp
 )
 
+target_link_libraries(engine PRIVATE ${SDL2_LIBRARIES} utilities render)
 
-target_link_libraries(engine PRIVATE glfw ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} gml utilities render)
