--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "software_rendering/engine/imgui"]
 	path = software_rendering/engine/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "software_rendering/engine/glm"]
+	path = software_rendering/engine/glm
+	url = https://github.com/g-truc/glm
