moved some files around

--- a/software_rendering/engine/render/CMakeLists.txt
+++ b/software_rendering/engine/render/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_library(render STATIC
-   renderer.cpp
+    backend/VertexShader.cpp
+    backend/VertexPostProcessor.cpp
+    backend/PrimitivesAssembler.cpp
+    backend/Rasterizer.cpp
+    backend/FragmentShader.cpp
+    renderer.cpp
 )
 
 target_include_directories(render PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
