--- a/software_rendering/application/display/CMakeLists.txt
+++ b/software_rendering/application/display/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.18)
 
+find_package(OpenMP REQUIRED)
+target_link_libraries(MyTarget PUBLIC )
+
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories("imgui")
@@ -15,4 +18,4 @@ add_library(display
     imgui/backends/imgui_impl_sdlrenderer2.cpp
 )
 
-target_link_libraries(display PRIVATE ${SDL2_LIBRARIES})
+target_link_libraries(display PRIVATE ${SDL2_LIBRARIES} OpenMP::OpenMP_CXX)
