now loading scenes from stored scene xml file format

--- a/software_rendering/application/CMakeLists.txt
+++ b/software_rendering/application/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.18)
 
 add_subdirectory(core_utils)
 add_subdirectory(display)
+add_subdirectory(engine)
 
 add_library(application STATIC
     application.cpp
 )
 
-target_link_libraries(application PRIVATE core_utils display)
+target_link_libraries(application PRIVATE core_utils display engine)
