--- a/software_rendering/application/engine/scene/CMakeLists.txt
+++ b/software_rendering/application/engine/scene/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.18)
 
+find_package(glm CONFIG REQUIRED)
+
 add_library(scene STATIC
     scene.cpp
     tinyxml2/tinyxml2.cpp
 )
 
-target_link_libraries(scene PRIVATE)
+target_link_libraries(scene PRIVATE glm)
