Added camera to scene structure and fixed memory leak

--- a/software_rendering/application/engine/renderer/CMakeLists.txt
+++ b/software_rendering/application/engine/renderer/CMakeLists.txt
@@ -2,9 +2,13 @@ cmake_minimum_required(VERSION 3.18)
 
 find_package(glm CONFIG REQUIRED)
 
+add_subdirectory(
+    render_backend
+)
+
 add_library(renderer STATIC
     renderer.cpp
 )
 
-target_link_libraries(renderer PRIVATE gml)
+target_link_libraries(renderer PRIVATE gml render_backend)
 
