epic new fetchcontent cmake wizardry

--- a/software_rendering/application/core_utils/CMakeLists.txt
+++ b/software_rendering/application/core_utils/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
 
-find_package(glm CONFIG REQUIRED)
-
 add_library(core_utils
     core_utils.cpp
 )
@@ -10,4 +8,4 @@ target_include_directories(core_utils PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_link_libraries(core_utils PRIVATE glm)
+target_link_libraries(core_utils PRIVATE glm::glm)
