--- a/software_rendering/application/display/CMakeLists.txt
+++ b/software_rendering/application/display/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
 
-find_package(OpenMP REQUIRED)
-
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
 include_directories("imgui")
 
 add_library(display
@@ -17,4 +13,4 @@ add_library(display
     imgui/backends/imgui_impl_sdlrenderer2.cpp
 )
 
-target_link_libraries(display PRIVATE ${SDL2_LIBRARIES} OpenMP::OpenMP_CXX)
+target_link_libraries(display PRIVATE SDL2::SDL2 OpenMP::OpenMP_CXX)
