--- a/software_rendering/application/engine/CMakeLists.txt
+++ b/software_rendering/application/engine/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 3.18)
 
-find_package(glm CONFIG REQUIRED)
-
 add_subdirectory(scene)
 
 add_library(engine STATIC
     engine.cpp
 )
 
-target_link_libraries(engine PRIVATE scene)
+target_link_libraries(engine PRIVATE scene glm::glm)
 
