--- a/software_rendering/application/engine/renderer/CMakeLists.txt
+++ b/software_rendering/application/engine/renderer/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
 
-find_package(glm CONFIG REQUIRED)
-
 add_subdirectory(
     render_backend
 )
@@ -10,5 +8,5 @@ add_library(renderer STATIC
     renderer.cpp
 )
 
-target_link_libraries(renderer PRIVATE gml render_backend)
+target_link_libraries(renderer PRIVATE gml render_backend glm::glm)
 
