removed imgui as submodule and added required files directly into repo

--- a/software_rendering/application/display/CMakeLists.txt
+++ b/software_rendering/application/display/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
 
-include_directories("imgui")
-
 add_library(display
     display.cpp
     gui.cpp
@@ -9,8 +7,8 @@ add_library(display
     imgui/imgui_draw.cpp
     imgui/imgui_widgets.cpp
     imgui/imgui_tables.cpp
-    imgui/backends/imgui_impl_sdl2.cpp
-    imgui/backends/imgui_impl_sdlrenderer2.cpp
+    imgui/imgui_impl_sdl2.cpp
+    imgui/imgui_impl_sdlrenderer2.cpp
 )
 
 target_link_libraries(display PRIVATE SDL2::SDL2 OpenMP::OpenMP_CXX)
