Added a simple renderer backend

--- a/software_rendering/application/engine/CMakeLists.txt
+++ b/software_rendering/application/engine/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
 
 add_subdirectory(scene)
+add_subdirectory(renderer)
 
 add_library(engine STATIC
     engine.cpp
 )
 
-target_link_libraries(engine PRIVATE scene glm::glm)
+target_link_libraries(engine PRIVATE scene renderer glm::glm)
 
