--- a/software_rendering/application/engine/renderer/CMakeLists.txt
+++ b/software_rendering/application/engine/renderer/CMakeLists.txt
@@ -1,12 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
-add_subdirectory(
-    render_backend
-)
-
 add_library(renderer STATIC
     renderer.cpp
 )
 
-target_link_libraries(renderer PRIVATE gml render_backend glm::glm)
-
+target_link_libraries(renderer PRIVATE glm::glm)
