added mesh loading

--- a/software_rendering/application/CMakeLists.txt
+++ b/software_rendering/application/CMakeLists.txt
@@ -8,4 +8,4 @@ add_library(application STATIC
     application.cpp
 )
 
-target_link_libraries(application PRIVATE core_utils display engine glm::glm SDL2::SDL2 OpenMP::OpenMP_CXX)
+target_link_libraries(application PRIVATE core_utils display engine glm::glm SDL2::SDL2 OpenMP::OpenMP_CXX assimp)
