--- a/software_rendering/application/window/CMakeLists.txt
+++ b/software_rendering/application/window/CMakeLists.txt
@@ -13,4 +13,4 @@ add_library(window
     imgui/implot_items.cpp
 )
 
-target_link_libraries(window PRIVATE SDL2::SDL2)
+target_link_libraries(window PRIVATE SDL2::SDL2 glm::glm)
